--- a/Chat/app/build.gradle
+++ b/Chat/app/build.gradle
@@ -30,16 +30,17 @@ protobuf {
         javalite {
             artifact = 'com.google.protobuf:protoc-gen-javalite:3.0.0'
         }
+        grpc { artifact = 'io.grpc:protoc-gen-grpc-java:1.21.0'
+        }
     }
     generateProtoTasks {
         all().each { task ->
-            task.builtins {
-                // In most cases you don't need the full Java output
-                // if you use the lite output.
-                remove java
-            }
             task.plugins {
                 javalite { }
+                grpc {
+                    // Options added to --grpc_out
+                    option 'lite'
+                }
             }
         }
     }
